--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ section p {
 	text-align: center;
 }
 section h1 {
+	/* maybe change the font to courier */
 	font: 32px 'Open Sans';
 	font-weight: bold;
 	color: #990000;
